Tab Path overflow fix

--- a/www/scss/ldart/fixes.scss
+++ b/www/scss/ldart/fixes.scss
@@ -6,14 +6,7 @@
 
 // Temporary fixes
 
-/*
-// a buttons
-a {
-  &.#{$css-prefix}button--icon-container,
-  &.#{$css-prefix}button--icon-border,
-  &.#{$css-prefix}button--icon-border-filled {
-    text-align: center;
-    padding-top: 10px; // (36-16)/2
- }
+// mobile
+.slds-tabs--path {
+  overflow: hidden;
 }
-*/
